SimGrid (3.3.2-svn) unstable; urgency=low

 SMPI:
  * Implement some more MPI primitives: 
    MPI_Waitany, MPI_Waitall, MPI_Reduce, MPI_Allreduce, MPI_Sendrecv
  * Add support for optimized collectives (Bcast is now binomial by default)
  * Port smpirun and smpicc to OS X

 SURF: 
  * Extract the routing logic into its own object.
    (was dupplicated in network.c and workstation_LV07.c;
     Allows to implement other ways of storing that info)
    => kill now useless network_card concept
    - Use dynar to represent routes (instead of void** + int*)
    - kill link_set (use surf_network_model->resource_set instead)
    - Add a command-line option to choose the routing schema to use

  * Simplify model declaration
    (less redirections, less function to write when defining a model)
    - Factorize stuff between models:
      - model_init/exit
      - Set of resources:
        surf_model_resource_set(model)
        surf_model_resource_by_name(model, name)
    - Unify the types of models in s_surf_model_t (using an union)
    - Embeed fields of common_public directly into s_surf_model_t
    - Rename model methods:
      action_free ~> action_unref
      action_change_state ~> action_state_set
      action_get_state    ~> action_state_get
    - Change model methods into functions :
      (model)->common_public->action_use  ~> surf_action_ref
      
  * Implement a generic resource; use it as ancestor to specific ones
    (allows to kill duplicated code in models)
    Drawback: timer command don't need no name nor properties;
              workstation_CLM03 don't need no properties
    (but I guess we can live with those few bytes wasted)
    
  * Improve the action object model
    - implement a constructor avoiding dupplicated code about field
      initialization in generic_action part.
      
  * Kill the SDP model: it has an external dependency, is deprecated
    in flavor of modern lmm models, and didn't compile since a while
 
 SimDag: